--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
             <button type="button" class="close btn btn-danger" data-dismiss="modal" aria-hidden="true">x</button>
-             <iframe width="560" height="315" src="//www.youtube.com/embed/P8ZaIv3JIgE?list=UUEjma1qbt_vQ5jfoDZqcWbQ" frameborder="0" allowfullscreen></iframe>
+             <iframe width="420" height="315" src="//www.youtube.com/embed/xfr64zoBTAQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
