--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
-    <!-- This is our Google Arvo Font and Font-Awesome -->
-    <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    
+    <!--Google Fonts API and Font-Awesome-->
+    <link href='http://fonts.googleapis.com/css?family=Rajdhani:400,500,600|Russo+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/custom.css" rel="stylesheet">
@@ -32,9 +32,10 @@
     <![endif]-->
   </head>
 
-  <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+  <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <body>
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -43,102 +44,74 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#jumbotron"><img src="images/top_logo.png" alt="One Million Lines" title="One Million Lines"></a>
+          <a class="navbar-brand" href="#"><img src="images/ecogalapagos-logo.png" alt="Ecogalapagos" title="Ecogalapagos"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#who">WHO WE ARE</a></li>
-            <li><a href="#get-involved">GET INVOLVED</a></li>
+          <ul class="econav navbar-left">
+            <a href="#Ecogalapagos">Ecogalapagos</a>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="programs.html">Programs</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="jumbotron" class="jumbotron">
+    <div class="jumbotron">
       <div class="container">
-        <h1>Our goal is to inspire <br> 
-        Tallahassee to write 1,000,000 <br> lines of code_</h1>
-        <p>All over the country people are taking the 
-        <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.ORG</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_.</p>
-        <p><a class="btn btn-danger btn-lg" href="#" role="button" data-toggle="modal" data-target="#myModal">Get Involved &raquo;</a></p>
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-            <button type="button" class="close btn btn-danger" data-dismiss="modal" aria-hidden="true">x</button>
-             <iframe width="420" height="315" src="//www.youtube.com/embed/xfr64zoBTAQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-        <img src="images/code.png" title="Code.org logo" alt="Code.org">
+        <h1>Ecogalapagos</h1>
+        <p>Our mission helps us to accomplish three main functions through our non-profit establishment: to provide a hands on study abroad program for youth across the world; to create a youth center in San Cristobal, Galapagos designed to enrich the lives of students with educational, cultural, and recreational activities; and to establish a world class volunteer experience for students, teachers, and others.</p>
+        <p><a class="btn btn-success btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
-    
-    <div id="who">
-    <div class="container homepage">
-    <img src="images/academy_brand_med.png" alt="MASSIVE Academy" title="MASSIVE Academy">
-    <h2>Who We Are</h2>
-    <hr>
-    <p>We are <a href="http://www.massiveacademy.us" target="_blank"> MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>  
-    </div>
-    </div>
 
-
-    <div id="get-involved">
-    <div class="container homepage">
-    <h2>Get Involved</h2>
-    <hr>
+    <div class="container">
+      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-            </span>
-          <h3>Students</h3>
-          <p>Want to learn how to code? Want to help us get 1,000,000 lines? Click the button below and we'll let you know how to get involved.</p>
-          <p><a class="btn btn-default" href="#" role="button">Start Learning &raquo;</a></p>
-        </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
-          <h3>Educators</h3>
-          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen.</p>
-          <p><a class="btn btn-default" href="http://www.google.com" target="_blank" role="button">Join the Initiative &raquo;</a></p>
+          <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Youth</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-line-chart fa-stack-2x"></i>
+            </span>
+          <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Change</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-globe fa-stack-2x"></i>
             </span>
-          <h3>Sponsors</h3>
-          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
-          <p><a class="btn btn-default" href="https://docs.google.com/forms/d/1fj1mSI97ZMUWzz7ykuduSMXcWrbazf69oENrfzkjvZ0/viewform?usp=send_form" target="_blank" role="button">Give Support &raquo;</a></p>
+          <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Ecosystem</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
-    </div> <!-- /container -->
+
       <hr>
 
       <footer>
-      <div class="container">
-        <p><img src="images/one_million_bottom_brand.png"></p>
-        </div>
-        <div id="back-to-top">
-        <a href="#jumbotron"><i class="fa fa-3x fa-chevron-circle-up"></i></a>
-      </div>
+        <p>&copy; Company 2014</p>
       </footer>
-  
+    </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript-->
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
   </body>
 </html>
