--- a/contactus.html
+++ b/contactus.html
@@ -61,14 +61,14 @@
     </nav><!-- /.navbar -->
 
    <div class="contactus">  
-  <form id="contact" action="" method="post">
+  <form id="contact" action="//forms.brace.io/salman-malik@windowslive.com" method="POST">
     <h3>Contact Us</h3>
     <h4>Get in touch with us!</h4>
     <fieldset>
       <input placeholder="Your name" type="text" tabindex="1" required autofocus>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+      <input placeholder="Your Email Address" name="_replyto" type="email" tabindex="2" required>
     </fieldset>
     <fieldset>
       <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
@@ -77,7 +77,7 @@
       <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
     </fieldset>
     <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+      <button name="submit" type="submit" id="contact-submit" value="Send" data-submit="...Sending">Submit</button>
     </fieldset>
   </form>
  
