--- a/contactus.html
+++ b/contactus.html
@@ -61,7 +61,7 @@
     </nav><!-- /.navbar -->
 
    <div class="contactus">  
-  <form id="contact" action="//forms.brace.io/salman-malik@windowslive.com" method="POST">
+  <form id="contact" action="http://formspree.io/salman-malik@windowslive.com" method="POST">
     <h3>Contact Us</h3>
     <h4>Get in touch with us!</h4>
     <fieldset>
