--- a/contactus.html
+++ b/contactus.html
@@ -65,23 +65,21 @@
     <h3>Contact Us</h3>
     <h4>Get in touch with us!</h4>
     <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Your name" name="Name" type="text" tabindex="1" required autofocus>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" name="_replyto" type="email" tabindex="2" required>
+      <input placeholder="Your Email Address" name="replyto" type="email" tabindex="2" required>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+      <input placeholder="Your Phone Number" name="Number" type="tel" tabindex="3" required>
     </fieldset>
     <fieldset>
-      <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+      <textarea placeholder="Type your Message Here..." name="message" tabindex="5" required></textarea>
     </fieldset>
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" value="Send" data-submit="...Sending">Submit</button>
     </fieldset>
-  </form>
- 
-  
+  </form>  
 </div>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
