--- a/index.html
+++ b/index.html
@@ -67,7 +67,23 @@
         <p><a class="btn btn-success btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
+    
+    <div id="Eco">
+      <div class="container homepage">
+        <img src="images/ecogalapagos-logo.png" alt="EcoGalapagos" title="EcoGalapagos">
+        <h2>Who We Are</h2>
+        <hr>
+        <p>We are <a href="http://www.ecogalapagos.org" target="_blank"> EcoGalapagos</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+      </div>
+    </div> 
 
+
+  
+   <div id="one-change">
+   <div class="container homepage">
+     <h2>OUR PURPOSE</h2>
+     <hr>
+   </div>
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
@@ -78,7 +94,7 @@
             </span>
           <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Youth</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button" style="color: #00cc00">Join the Youth &raquo;</a></p>
         </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
@@ -86,7 +102,7 @@
             </span>
           <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Change</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button" style="color: #00cc00">Make Changes &raquo;</a></p>
        </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
@@ -94,10 +110,10 @@
             </span>
           <h2><span style="color: #99CC00">ONE <span style="color: #000000;"> Ecosystem</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button" style="color: #00cc00">Join the Initiative &raquo;</a></p>
         </div>
       </div>
-
+    </div> 
       <hr>
 
       <footer>
