--- a/contactus.html
+++ b/contactus.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/custom.ss" rel="stylesheet">
     
     <!-- Style for Contact Us page -->
     <link rel="stylesheet" type="text/css" href="css/contactus.css">
